Reformatted post form, made buttons larger, song title larger/bold, and fixed spacing issues

--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -44,20 +44,27 @@
   padding: 3px;
   color: white;
   background-color: #3396ff;
-  width: 70px;
+  width: 80px;
   text-align: center;
   text-decoration: none;
   border: 2px solid #3396ff;
   border-radius: 25px;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .PostPost {
-  margin-right: 5px;
+  margin-right: 10px;
+}
+
+.PostPost:hover, .DeletePost:hover {
+  background-color: #0258B1;
+  border-color: #0258B1;
 }
 
 .Lyrics {
   overflow-y: auto;
+  margin-top: 20px;
 }
 
 .Songs {
